Review and cleanup documents